fix broken layout inside blog paragraph if it has html elements

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -1,8 +1,5 @@
-.main p {
-  display: flex;
-  justify-content: center;
-}
-
-.main img {
+.main p img {
   max-width: 100%;
+  display: block;
+  margin: 0 auto;
 }
